--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,48 @@
-body {
+:root {
+  --primary-color: #34c94b;
+  --secondary-color: #121212;
+  --ternary-color: #ffffff;
+}
+* {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
+  box-sizing: border-box;
+}
+body {
+  font-family: "Poppins", serif;
+  background-color: var(--secondary-color);
+  max-width: 1920px;
+  margin: 0 auto;
+}
+.swiper {
+  width: 100%;
+  height: 100%;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.swiper-slide {
+  text-align: center;
+  font-size: 18px;
+  background: #fff;
+
+  /* Center slide text vertically */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.swiper-button-next,
+.swiper-button-prev {
+  background-color: var(--primary-color) !important;
+  color: var(--ternary-color) !important;
+  height: 30px !important;
+  width: 30px !important;
+  border-radius: 50% !important;
+  transform: translate(-50%);
+}
+.swiper-button-prev:after,
+.swiper-button-next:after {
+  font-size: 1rem !important;
+  font-weight: bold !important;
+}
+.swiper-wrapper{
+  padding: 1rem 0;
 }
